@@ -1,3 +1,9 @@
+Thu Oct 19 22:28:59 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>
+
+        * contrib/minizip/iowin32.c
+        * contrib/minizip/iowin32.h
+          Removed these files.
+
 Thu Oct 19 23:20:26 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>
 
         * examples/IPC_SAP/SOCK_SAP/CPP-inserver.cpp:
